[tool.poetry]
name = "pywsus"
version = "0.1.0"
description = "Fork of GoSecure/pywsus"
authors = ["Rutger Hartog <r.l.hartog92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.2"
lxml = "^4.9.2"
soupsieve = "^2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
